# dipsit-backend-actix

./: .env.sample  Cargo.toml  README.md
src/: main.rs
src/controllers/: index.rs
src/routes/: router.rs
