[package]
name = "dipsit-backend-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
actix-cors = "0.6.4"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono", "uuid"] }
env_logger = "0.10.0"
